--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "author": "Darsh Doshi",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "pdf-merger-js": "^5.1.1"
   }
 }
